--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html923"
+<A NAME="tex2html924"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html917"
+<A NAME="tex2html918"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html911"
+<A NAME="tex2html912"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html919"
+<A NAME="tex2html920"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html921"
+<A NAME="tex2html922"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html924"
+<B> Sig:</B> <A NAME="tex2html925"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html918"
+<B>Sup:</B> <A NAME="tex2html919"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html912"
+<B> Ant:</B> <A NAME="tex2html913"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html919"
+<A NAME="tex2html920"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html921"
+<A NAME="tex2html922"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,44 +103,44 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html925"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html926"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html927"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html928"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html929"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html930"
-  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html931"
-  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html932"
-  HREF="node9.html#SECTION04120080000000000000">block versus Inline</A>
+  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html933"
-  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120080000000000000">block versus Inline</A>
 <LI><A NAME="tex2html934"
-  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html935"
-  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
+  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
 <LI><A NAME="tex2html936"
-  HREF="node9.html#SECTION041200120000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html937"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200120000000000000">Mocha y Chai</A>
 <LI><A NAME="tex2html938"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html939"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html940"
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html941"
   HREF="node9.html#SECTION041200160000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2634"></A>
+   <A NAME="2636"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -335,7 +335,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2639"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2641"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2641"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2643"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -386,25 +386,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2651"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2653"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2653"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2655"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2655"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2657"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2657"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2659"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2659"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2661"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2661"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2663"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -528,7 +528,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2667"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2669"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -586,7 +586,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2673"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2675"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -611,7 +611,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2679"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2681"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -620,7 +620,7 @@ The <A NAME="2679"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2681"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2683"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -631,7 +631,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2683"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2685"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -643,7 +643,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2685"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2687"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -655,7 +655,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2689"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2691"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -669,7 +669,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2693"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2695"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -749,17 +749,20 @@ issues.
 If the styles are being overridden, you can then view the Computed Style pane to see the CSS that is actually being utilized to style your document.
 
 <P>
-See 
 
 <UL>
 <LI><A NAME="tex2html31"
   HREF="https://developer.chrome.com/devtools/docs/elements-styles">Editing styles</A>
+in Chrome developer pages.
 </LI>
 <LI><A NAME="tex2html32"
   HREF="http://stackoverflow.com/questions/11065229/debugging-css-in-google-chrome">stackoverflow: Debugging CSS in Google Chrome</A>
 </LI>
+<LI><A NAME="tex2html33"
+  HREF="http://youtu.be/Z3HGJsNLQ1E">Chrome DevTools for CSS - Better CSS Coding and CSS Debugging with Developer Tools</A>
+en YouTube by LearnCode.academy
+</LI>
 </UL>
-in Chrome developer pages.
 
 <P>
 
@@ -769,7 +772,7 @@ block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2705"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2707"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2707"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2709"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -796,7 +799,7 @@ However, those same properties wouldn't affect block elements.
 <P>
 </LI>
 <LI>See 
-<A NAME="tex2html33"
+<A NAME="tex2html34"
   HREF="http://www.w3schools.com/css/css_display_visibility.asp">CSS Display - Block and Inline Elements at w3schools</A>
 </LI>
 </UL>
@@ -810,17 +813,17 @@ Propiedades CSS</A>
 
 <UL>
 <LI>The 
-<A NAME="tex2html34"
+<A NAME="tex2html35"
   HREF="http://www.w3schools.com/cssref/pr_pos_vertical-align.asp">vertical-align</A>
 property sets the vertical alignment of an element.
 </LI>
 <LI>The 
-<A NAME="tex2html35"
+<A NAME="tex2html36"
   HREF="http://www.w3schools.com/cssref/pr_text_text-align.asp">text-align</A>
 property specifies the horizontal alignment of text in an element.
 </LI>
 <LI>The 
-<A NAME="tex2html36"
+<A NAME="tex2html37"
   HREF="http://www.w3schools.com/cssref/pr_font_font-family.asp">font-family</A>
 property specifies the font for an element.
 
@@ -899,7 +902,7 @@ that runs in Node.js or in the browser.
 <P>
 It is open source (MIT licensed),
 and we can learn more about it at
-<A NAME="tex2html37"
+<A NAME="tex2html38"
   HREF="https://github.com/mochajs/mocha">https://github.com/mochajs/mocha</A>
 <P>
 Let's say
@@ -940,14 +943,14 @@ tests
 <P>
 Añadimos <code>chai.js</code>
 (Véase 
-<A NAME="tex2html38"
+<A NAME="tex2html39"
   HREF="http://chaijs.com/guide/installation/">http://chaijs.com/guide/installation/</A>) al directorio <code>tests</code>.
 
 <P>
 Chai is a platform-agnostic BDD/TDD assertion library featuring several interfaces 
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
-<A NAME="tex2html39"
+<A NAME="tex2html40"
   HREF="http://chaijs. com/">http://chaijs. com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
@@ -957,12 +960,12 @@ We can also install Chai on the command line using npm, as follows:
 
 <P>
 The latest tagged version will be available for hot-linking at 
-<A NAME="tex2html40"
+<A NAME="tex2html41"
   HREF="http://chaijs.com/chai.js">http://chaijs.com/chai.js</A>.
 
 <P>
 If you prefer to host yourself, use the <code>chai.js</code> file from the root of the 
-<A NAME="tex2html41"
+<A NAME="tex2html42"
   HREF="https://github.com/chaijs/chai">github project</A>. 
 
 <P>
@@ -979,7 +982,7 @@ tests/
 </PRE>
 Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html42"
+<A NAME="tex2html43"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
@@ -1090,14 +1093,14 @@ Pruebas: Véase</A>
   
 
 <UL>
-<LI><A NAME="tex2html43"
+<LI><A NAME="tex2html44"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html44"
+<LI><A NAME="tex2html45"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html45"
+<LI><A NAME="tex2html46"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -1106,19 +1109,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html923"
+<A NAME="tex2html924"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html917"
+<A NAME="tex2html918"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html911"
+<A NAME="tex2html912"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html919"
+<A NAME="tex2html920"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html921"
+<A NAME="tex2html922"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1158,11 +1161,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html924"
+<B> Sig:</B> <A NAME="tex2html925"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html918"
+<B>Sup:</B> <A NAME="tex2html919"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html912"
+<B> Ant:</B> <A NAME="tex2html913"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
