--- a/node9.html
+++ b/node9.html
@@ -391,7 +391,7 @@ What you see above is referred to as a <A NAME="2655"></A><SPAN  CLASS="textit">
 <P>
 
 <UL>
-<LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
+<LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
 inside the curly braces is called a <A NAME="2657"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
 <LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2659"></A><SPAN  CLASS="textit">selector</SPAN>.
