--- a/node9.html
+++ b/node9.html
@@ -484,11 +484,11 @@ h2 ~ p { margin-bottom: 20px; }
 ¿A que elementos de este HTML se aplica?
 <PRE>
 &lt;h2&gt;Title&lt;/h2&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
+&lt;p&gt;Paragraph example 1.&lt;/p&gt;
+&lt;p&gt;Paragraph example 2.&lt;/p&gt;
+&lt;p&gt;Paragraph example 3.&lt;/p&gt;
 &lt;div class="box"&gt;
-  &lt;p&gt;Paragraph example.&lt;/p&gt;
+  &lt;p&gt;Paragraph example 4.&lt;/p&gt;
 &lt;/div&gt;
 </PRE>
 </LI>
@@ -500,12 +500,12 @@ text-indent: 1.5em; margin-bottom: 0;
 ¿A que elementos de este HTML se aplica?
 <PRE>
 &lt;h2&gt;Title&lt;/h2&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
-&lt;p&gt;Paragraph example.&lt;/p&gt;
+&lt;p&gt;Paragraph example 1.&lt;/p&gt;
+&lt;p&gt;Paragraph example 2.&lt;/p&gt;
+&lt;p&gt;Paragraph example 3.&lt;/p&gt;
 &lt;div class="box"&gt;
-  &lt;p&gt;Paragraph example.&lt;/p&gt;
-  &lt;p&gt;Paragraph example.&lt;/p&gt;
+  &lt;p&gt;Paragraph example 4.&lt;/p&gt;
+  &lt;p&gt;Paragraph example 5.&lt;/p&gt;
 &lt;/div&gt;
 </PRE>
 </LI>
