--- a/node7.html
+++ b/node7.html
@@ -130,7 +130,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html844"
   HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html845"
-  HREF="node9.html#SECTION04120080000000000000">block versus Inline</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html846"
   HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html847"
