--- a/node91.html
+++ b/node91.html
@@ -140,7 +140,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>autómata árbol</STRONG>
 <DD><A HREF="node72.html#9044">Casamiento Árbol</A>
 <DT><STRONG>block</STRONG>
-<DD><A HREF="node9.html#2709">block versus Inline</A>
+<DD><A HREF="node9.html#2709">Block versus Inline</A>
 <DT><STRONG>Border</STRONG>
 <DD><A HREF="node9.html#2693">El Modelo de Caja</A>
 <DT><STRONG>box model</STRONG>
@@ -231,7 +231,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>INI</STRONG>
 <DD><A HREF="node14.html#2889">Ejercicios</A>
 <DT><STRONG>inline</STRONG>
-<DD><A HREF="node9.html#2711">block versus Inline</A>
+<DD><A HREF="node9.html#2711">Block versus Inline</A>
 <DT><STRONG>IR</STRONG>
 <DD><A HREF="node71.html#8994">Selección de Código y</A>
 <DT><STRONG>items núcleo</STRONG>
