--- a/node9.html
+++ b/node9.html
@@ -118,7 +118,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html932"
   HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html933"
-  HREF="node9.html#SECTION04120080000000000000">block versus Inline</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html934"
   HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html935"
@@ -767,7 +767,7 @@ en YouTube by LearnCode.academy
 <P>
 
 <H4><A NAME="SECTION04120080000000000000">
-block versus Inline</A>
+Block versus Inline</A>
 </H4>
   
 
