--- a/node7.html
+++ b/node7.html
@@ -138,117 +138,119 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html849"
   HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html850"
-  HREF="node9.html#SECTION041200120000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION041200120000000000000">package.json</A>
 <LI><A NAME="tex2html851"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html852"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html853"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html854"
-  HREF="node9.html#SECTION041200160000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html855"
+  HREF="node9.html#SECTION041200170000000000000">Pruebas: Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html855"
+<LI><A NAME="tex2html856"
   HREF="node10.html">Práctica: Comma Separated Values. CSV</A>
 <UL>
-<LI><A NAME="tex2html856"
-  HREF="node10.html#SECTION04130010000000000000">Donde</A>
 <LI><A NAME="tex2html857"
-  HREF="node10.html#SECTION04130020000000000000">Introducción al formato CSV</A>
+  HREF="node10.html#SECTION04130010000000000000">Donde</A>
 <LI><A NAME="tex2html858"
-  HREF="node10.html#SECTION04130030000000000000">Ejemplo de ejecución</A>
+  HREF="node10.html#SECTION04130020000000000000">Introducción al formato CSV</A>
 <LI><A NAME="tex2html859"
-  HREF="node10.html#SECTION04130040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+  HREF="node10.html#SECTION04130030000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html860"
-  HREF="node10.html#SECTION04130050000000000000">index.html</A>
+  HREF="node10.html#SECTION04130040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
 <LI><A NAME="tex2html861"
-  HREF="node10.html#SECTION04130060000000000000">jQuery</A>
+  HREF="node10.html#SECTION04130050000000000000">index.html</A>
 <LI><A NAME="tex2html862"
-  HREF="node10.html#SECTION04130070000000000000">How JQuery Works</A>
+  HREF="node10.html#SECTION04130060000000000000">jQuery</A>
 <LI><A NAME="tex2html863"
-  HREF="node10.html#SECTION04130080000000000000">JSON.stringify()</A>
+  HREF="node10.html#SECTION04130070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html864"
-  HREF="node10.html#SECTION04130090000000000000">Underscore</A>
+  HREF="node10.html#SECTION04130080000000000000">JSON.stringify()</A>
 <LI><A NAME="tex2html865"
-  HREF="node10.html#SECTION041300100000000000000">Templates en Underscore</A>
+  HREF="node10.html#SECTION04130090000000000000">Underscore</A>
 <LI><A NAME="tex2html866"
-  HREF="node10.html#SECTION041300110000000000000">Content delivery network or content distribution network (CDN)</A>
+  HREF="node10.html#SECTION041300100000000000000">Templates en Underscore</A>
 <LI><A NAME="tex2html867"
-  HREF="node10.html#SECTION041300120000000000000">textarea, autofocus y button</A>
+  HREF="node10.html#SECTION041300110000000000000">Content delivery network or content distribution network (CDN)</A>
 <LI><A NAME="tex2html868"
-  HREF="node10.html#SECTION041300130000000000000">Local Storage (HTML5 Web Storage)</A>
+  HREF="node10.html#SECTION041300120000000000000">textarea, autofocus y button</A>
 <LI><A NAME="tex2html869"
-  HREF="node10.html#SECTION041300140000000000000">global.css</A>
+  HREF="node10.html#SECTION041300130000000000000">Local Storage (HTML5 Web Storage)</A>
 <LI><A NAME="tex2html870"
-  HREF="node10.html#SECTION041300150000000000000">csv.js</A>
+  HREF="node10.html#SECTION041300140000000000000">global.css</A>
 <LI><A NAME="tex2html871"
+  HREF="node10.html#SECTION041300150000000000000">csv.js</A>
+<LI><A NAME="tex2html872"
   HREF="node10.html#SECTION041300160000000000000">Tareas</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html872"
+<LI><A NAME="tex2html873"
   HREF="node11.html">Comentarios y Consejos</A>
 <UL>
-<LI><A NAME="tex2html873"
-  HREF="node11.html#SECTION04140010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
 <LI><A NAME="tex2html874"
+  HREF="node11.html#SECTION04140010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
+<LI><A NAME="tex2html875"
   HREF="node11.html#SECTION04140020000000000000">favicons y shortcut icons</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html875"
-  HREF="node12.html">Ejercicios</A>
 <LI><A NAME="tex2html876"
+  HREF="node12.html">Ejercicios</A>
+<LI><A NAME="tex2html877"
   HREF="node13.html">Práctica: Palabras Repetidas</A>
 <UL>
-<LI><A NAME="tex2html877"
-  HREF="node13.html#SECTION04160010000000000000">Donde</A>
 <LI><A NAME="tex2html878"
-  HREF="node13.html#SECTION04160020000000000000">Ejemplo de ejecución</A>
+  HREF="node13.html#SECTION04160010000000000000">Donde</A>
 <LI><A NAME="tex2html879"
-  HREF="node13.html#SECTION04160030000000000000">Estructura</A>
+  HREF="node13.html#SECTION04160020000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html880"
-  HREF="node13.html#SECTION04160040000000000000">index.html</A>
+  HREF="node13.html#SECTION04160030000000000000">Estructura</A>
 <LI><A NAME="tex2html881"
-  HREF="node13.html#SECTION04160050000000000000">global.css</A>
+  HREF="node13.html#SECTION04160040000000000000">index.html</A>
 <LI><A NAME="tex2html882"
-  HREF="node13.html#SECTION04160060000000000000">repeated_words.js</A>
+  HREF="node13.html#SECTION04160050000000000000">global.css</A>
 <LI><A NAME="tex2html883"
+  HREF="node13.html#SECTION04160060000000000000">repeated_words.js</A>
+<LI><A NAME="tex2html884"
   HREF="node13.html#SECTION04160070000000000000">Ficheros de Entrada</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html884"
-  HREF="node14.html">Ejercicios</A>
 <LI><A NAME="tex2html885"
-  HREF="node15.html">Ejercicios</A>
+  HREF="node14.html">Ejercicios</A>
 <LI><A NAME="tex2html886"
+  HREF="node15.html">Ejercicios</A>
+<LI><A NAME="tex2html887"
   HREF="node16.html">Práctica: Ficheros INI</A>
 <UL>
-<LI><A NAME="tex2html887"
-  HREF="node16.html#SECTION04190010000000000000">Donde</A>
 <LI><A NAME="tex2html888"
-  HREF="node16.html#SECTION04190020000000000000">index.html</A>
+  HREF="node16.html#SECTION04190010000000000000">Donde</A>
 <LI><A NAME="tex2html889"
-  HREF="node16.html#SECTION04190030000000000000">Ficheros</A>
+  HREF="node16.html#SECTION04190020000000000000">index.html</A>
 <LI><A NAME="tex2html890"
-  HREF="node16.html#SECTION04190040000000000000">global.css</A>
+  HREF="node16.html#SECTION04190030000000000000">Ficheros</A>
 <LI><A NAME="tex2html891"
-  HREF="node16.html#SECTION04190050000000000000">Ficheros de Prueba</A>
+  HREF="node16.html#SECTION04190040000000000000">global.css</A>
 <LI><A NAME="tex2html892"
-  HREF="node16.html#SECTION04190060000000000000">ini.js</A>
+  HREF="node16.html#SECTION04190050000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html893"
-  HREF="node16.html#SECTION04190070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node16.html#SECTION04190060000000000000">ini.js</A>
 <LI><A NAME="tex2html894"
-  HREF="node16.html#SECTION04190080000000000000">Tareas</A>
+  HREF="node16.html#SECTION04190070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 <LI><A NAME="tex2html895"
+  HREF="node16.html#SECTION04190080000000000000">Tareas</A>
+<LI><A NAME="tex2html896"
   HREF="node16.html#SECTION04190090000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html896"
+<LI><A NAME="tex2html897"
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 <UL>
-<LI><A NAME="tex2html897"
-  HREF="node17.html#SECTION041100010000000000000">TDOP, Top Down Operator Precedence</A>
 <LI><A NAME="tex2html898"
+  HREF="node17.html#SECTION041100010000000000000">TDOP, Top Down Operator Precedence</A>
+<LI><A NAME="tex2html899"
   HREF="node17.html#SECTION041100020000000000000">Objetivos de la Práctica</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
@@ -316,7 +318,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-02-03</I>
+2015-02-05</I>
 </ADDRESS>
 </BODY>
 </HTML>
