--- a/node9.html
+++ b/node9.html
@@ -142,7 +142,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2651"></A>
+   <A NAME="2655"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -337,7 +337,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2656"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2658"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2660"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2662"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -388,25 +388,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2668"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2672"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2670"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2674"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2672"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2676"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2674"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2678"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2676"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2678"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2680"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2682"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -530,7 +530,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2684"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2688"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -588,7 +588,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2690"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2694"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -613,7 +613,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2696"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2700"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -622,7 +622,7 @@ The <A NAME="2696"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2698"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2702"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -633,7 +633,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2700"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2704"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -645,7 +645,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2702"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2706"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -657,7 +657,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2706"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2710"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -671,7 +671,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2710"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2714"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -774,7 +774,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2722"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2724"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2726"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2728"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1018,12 +1018,29 @@ Pruebas: Estructura</A>
   
 
 <P>
-Instale <code>mocha</code>.
+Podemos instalar <code>mocha</code> globalmente:
 <PRE>
 $ npm install -g mocha
 </PRE>
+pero podemos también añadirlo en <code>package.json</code> como una <code>devDependencies</code>:
+<PRE>
+[/tmp/pl-grado-temperature-converter(karma)]$ head -n 5 package.json 
+{
+  "dependencies": {},
+  "devDependencies": {
+    "mocha": "latest"
+  },
+</PRE>
 
 <P>
+Y ahora podemos instalar todas las dependencias usando  <code>npm install</code>:
+<PRE>
+$ npm install
+npm http GET https://registry.npmjs.org/mocha
+npm http 200 https://registry.npmjs.org/mocha
+npm http GET https://registry.npmjs.org/commander/2.3.0
+...
+</PRE>
 Creamos la estructura para las pruebas:
 
 <P>
