--- a/node7.html
+++ b/node7.html
@@ -138,7 +138,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html849"
   HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html850"
-  HREF="node9.html#SECTION041200120000000000000">package.json</A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html851"
   HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html852"
