--- a/node9.html
+++ b/node9.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html938"
   HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html939"
-  HREF="node9.html#SECTION041200120000000000000">package.json</A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html940"
   HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html941"
@@ -897,7 +897,7 @@ Vea la sección <I>GitHub Project Pages</I> <A HREF="node85.html#subsection:gith
 <P>
 
 <H4><A NAME="SECTION041200120000000000000">
-package.json</A>
+Creando un fichero package.json</A>
 </H4>
   
 
