--- a/node9.html
+++ b/node9.html
@@ -1132,10 +1132,6 @@ tests/
 
 0 directories, 5 files
 </PRE>
-Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
-el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html44"
-  HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
 
@@ -1245,11 +1241,15 @@ Pruebas: Véase</A>
   
 
 <UL>
-<LI><A NAME="tex2html45"
+<LI><A NAME="tex2html44"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html46"
+<LI>Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
+el testing framework Mocha y  Chai en el repositorio 
+<A NAME="tex2html45"
+  HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>:
+<A NAME="tex2html46"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
 <LI><A NAME="tex2html47"
