--- a/node9.html
+++ b/node9.html
@@ -1141,7 +1141,7 @@ Pruebas: <TT>index.html</TT></A>
   
 
 <P>
-Modificamos <code>index.html</code> para 
+Creamos un fichero <code>tests/index.html</code> a partir del <code>index.html</code> para 
 
 <UL>
 <LI>Cargar <code>chai.js</code>
