--- a/node9.html
+++ b/node9.html
@@ -1141,7 +1141,8 @@ Pruebas: <TT>index.html</TT></A>
   
 
 <P>
-Creamos un fichero <code>tests/index.html</code> a partir del <code>index.html</code> para 
+Modificamos el fichero <code>tests/index.html</code> que fué generado por <code>mocha init</code>
+para 
 
 <UL>
 <LI>Cargar <code>chai.js</code>
