--- a/node9.html
+++ b/node9.html
@@ -1159,8 +1159,7 @@ para
 </PRE>
 </LI>
 </UL>
-
-<P>
+quedando así:
 <PRE>
 [~/srcPLgrado/temperature(master)]$ cat tests/index.html 
 &lt;!DOCTYPE html&gt;
